fixed review overlap on account management page

--- a/frontend/src/components/SpotsList/SpotsList.css
+++ b/frontend/src/components/SpotsList/SpotsList.css
@@ -6,7 +6,7 @@
     align-items: center;
     flex-wrap: wrap-reverse;
     width: 100%;
-    margin-top: 75px;
+    margin: 75px 0 75px 0
 }
 
 .spot-card-outer-container-flex h1 {
